<resources>
    <string name="app_name">RecipeBook</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chinese_food">Chinese Food:</string>
    <string name="french_food">French Food:</string>
    <string name="indian_food">Indian Food:</string>
    <string name="italian_food">Italian Food:</string>
    <string name="mediterranean_food">Mediterranean Food:</string>
    <string name="mexican_food">Mexican Food:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>