<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/foodLinearLayout"
    android:layout_width="match_parent"


    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
    android:id="@+id/chineseFoodTextView"
    style="@style/FoodTextView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/chinese_food" />

    <TextView
        android:id="@+id/frenchFoodTextView"
        style="@style/FoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/french_food" />

    <TextView
        android:id="@+id/indianFoodTextView"
        style="@style/FoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indian_food" />

    <TextView
        android:id="@+id/italianFoodTextView"
        style="@style/FoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/italian_food" />

    <TextView
        android:id="@+id/mediterraneanFoodTextView"
        style="@style/FoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mediterranean_food" />

    <TextView
        android:id="@+id/mexicanFoodTextView"
        style="@style/FoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mexican_food" />
</LinearLayout>




