<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/foodGridLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:useDefaultMargins="true"
    tools:context=".GridFragment">


    <Button
        android:id="@+id/chineseFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chinese_food"
        android:layout_column="0"/>

    <Button
        android:id="@+id/frenchFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/french_food"
        android:layout_column="1"/>

    <Button
        android:id="@+id/indianFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indian_food"
        android:layout_column="0"/>

    <Button
        android:id="@+id/italianFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italian_food"
        android:layout_column="1"/>

    <Button
        android:id="@+id/mediterraneanFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mediterranean_food"
        android:layout_column="0"/>


    <Button
        android:id="@+id/mexicanFoodButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mexican_food"
        android:layout_column="1"/>

</GridLayout>